build: upgrade android dependency stack